<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Login</string>
    <string name="txt_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="txt_forgot_pass">Forgot password?</string>
    <string name="txt_no_account" >Don\'t have an account ?</string>

    <string name="txt_register">Register</string>
</resources>