<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray">

    <!--top-->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_top"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="30dp"

            android:text="@string/txt_login"
            android:textColor="@color/white"
            android:textSize="20dp"/>
    </FrameLayout>
    <!--body-->
    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="3dp"

        android:background="@drawable/bg_radius"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email"


        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textSize="18dp"/>

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/bg_radius"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_key"




        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:drawablePadding="10dp"
        android:textSize="18dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="end"

        android:text="@string/txt_forgot_pass"
        android:textColor="@color/black"
        android:textSize="18dp"

        />

    <TextView
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"

        android:background="@drawable/bg_login"
        android:gravity="center"
        android:padding="10dp"

        android:text="@string/txt_login"
        android:textSize="18dp"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:gravity="center">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:text="@string/txt_no_account"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/txt_register"
                android:textColor="@color/orange"
                android:textSize="14dp"
                android:textStyle="bold" />
        </TableRow>
    </LinearLayout>


</LinearLayout>